--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
 
 <body>
   <app-root></app-root>
+
+  <script src="assets/js/main.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <!-- Latest compiled and minified JavaScript -->
